# nsnfind

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml  nsnfind.toml.example
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: sample-nsns.txt  single-nsn.txt
scripts/: verify.sh
src/: cli.rs  client.rs  config.rs  error.rs  main.rs  nsn.rs  output.rs  soap.rs
src/soap/: availability.rs  government.rs  mod.rs
wix/: main.wxs
