[package]
name = "nsnfind"
version = "0.2.0"
edition = "2024"
authors = ["Julian Chultarsky <jchultarsky@physna.com>"]
description = "CLI to look up parts availability and government catalog data by NSN/NIIN"
homepage = "https://github.com/jchultarsky101/nsnfind"
repository = "https://github.com/jchultarsky101/nsnfind"
documentation = "https://github.com/jchultarsky101/nsnfind#readme"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["nsn", "niin", "ilsmart", "aerospace", "parts"]
categories = ["command-line-utilities"]

[package.metadata.wix]
upgrade-guid = "7C4DC130-117C-40BA-9475-57CB5475046C"
path-guid = "5A366EF4-257E-4179-BE37-E57F4A3B2ED8"
license = false
eula = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
futures = "0.3"
quick-xml = { version = "0.39", features = ["serialize"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "http2", "gzip", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
